--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "homepage": "activelog",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.0.1",
+    "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-input-multiline": "^0.3.1",
     "react-moment": "^1.1.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
