--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "lodash.uniqueid": "^4.0.1",
     "moment": "^2.29.3",
     "react": "^18.0.0",
-    "react-bootstrap": "^2.2.3",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-input-multiline": "^0.3.1",
     "react-moment": "^1.1.2",
     "react-scripts": "5.0.1",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
